fixed button visibility issue. now hidden until results displayed

--- a/project_1/style.css
+++ b/project_1/style.css
@@ -60,3 +60,6 @@ h5 {
 .events-results, .series-results {
     margin-top: 7px;
 }
+button {
+    display: none;
+}
